--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://nguyenho51.github.io/ngho/dist/index.html">
+<meta http-equiv="refresh" content="0; url=https://nguyenho51.github.io/ngho/dist">
