--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
 <meta http-equiv="refresh" content="0; url=https://nguyenho51.github.io/ngho/dist/index.html">
+
+RewriteEngine on
+
+
+RewriteCond %{THE_REQUEST} /([^.]+)\.html [NC]
+RewriteRule ^ /%1 [NC,L,R]
+
+RewriteCond %{REQUEST_FILENAME}.html -f
+RewriteRule ^ %{REQUEST_URI}.html [NC,L]
