--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0;url=https://nguyenho51.github.io/ngho/doc" />
+<meta http-equiv="refresh" content="0;url=https://nguyenho51.github.io/ngho/docs" />
